--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -1,8 +1,11 @@
-.skill{
-    margin: 10px;
-    padding: 10px;
-    border: 2px solid gray;
-    border-radius: 5px;
+.skill {
+    margin: 8px;
+    padding: 8px;
+    border-radius: 13px;
+    border: 6px solid transparent;
+    border-image: url("../../assets/images/border.png") 100 round;
+    border-image-width: 10px;
+    border-image-outset: 3px;
     background-color: #eee;
     height: auto;
     display: flex;
@@ -11,14 +14,14 @@
     align-items: center;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
-    &:hover{
+    &:hover {
         background-color: #ddd;
         transform: scale(1.1);
     }
     width: 50%;
 }
 
-.skills{
+.skills {
     display: flex;
     flex-direction: column;
     justify-content: center;
