--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,27 +1,29 @@
+<app-loader *ngIf="isLoading"></app-loader>
 <div class="desc-container">
     <p id="description">
-        As a student developer, I am skilled in a variety of programming languages, including the languages, frameworks and tools right below. I am also proficient in using Git and SQL/PL SQL. I am a dedicated and hardworking
-        individual who is always looking to improve my skills and learn new technologies. I am seeking an internship for at leat 2 months, starting from April 2023 to June 2023,
-        where I can gain valuable experience and work on challenging projects. Thank you for considering me for your
-        internship program.
+        As a student developer, I am skilled in a variety of programming languages, including the languages, frameworks
+        and tools right below. I am also proficient in using Git and SQL/PL SQL. I am a dedicated and hardworking
+        individual who is always looking to improve my skills and learn new technologies. I am seeking an internship for
+        at leat 2 months, starting from April 2023 to June 2023,
+        where I can gain valuable experience and work on challenging projects.
     </p>
 </div>
 <h1 id="languages-title" class="title-size">Languages & frameworks</h1>
-<div class="content">
+<div class="content" *ngIf="!isLoading">
     <div *ngFor="let language of languages" id="languages" class="about"
-        [ngClass]="language.animation == true ? 'animate' : 'disabled'" >
-            <img [src]="language.image" alt="{{language.title}}" (click)="visitPage(language.url)">
+        [ngClass]="language.animation == true ? 'animate' : 'disabled'">
+        <img [src]="language.image" alt="{{language.title}}" (click)="visitPage(language.url)">
     </div>
 </div>
 <h1 id="tools-title" class="title title-size">Tools</h1>
-<div class="content">
+<div class="content" *ngIf="!isLoading">
     <div *ngFor="let tool of tools" id="tools" class="about"
         [ngClass]="tool.animation == true ? 'animate' : 'disabled'">
         <img [src]="tool.image" alt="{{tool.title}}" (click)="visitPage(tool.url)">
     </div>
 </div>
 <h1 id="hobbies-title" class="title title-size">Hobbies</h1>
-<div class="content">
+<div class="content" *ngIf="!isLoading">
     <div *ngFor="let hobby of hobbies" id="hobbies" class="about"
         [ngClass]="hobby.animation == true ? 'animate' : 'disabled'">
         <img [src]="hobby.image" alt="{{hobby.title}}" (click)="visitPage(hobby.url)">
