--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,5 +1,6 @@
+<app-loader *ngIf="isLoading"></app-loader>
 <div class="container">
-    <div class="projects">
+    <div class="projects" *ngIf="!isLoading">
         <app-project-card *ngFor="let project of projects" [project]="project"></app-project-card>
     </div>
 </div>
