adding capitalympics + new technos

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<app-loader *ngIf="isLoading"></app-loader>
+<app-loader *ngIf="isLoading" [percentage]="percentage"></app-loader>
 <div class="desc-container">
     <p id="description">
         As a student developer, I am skilled in a variety of programming languages, including the languages, frameworks
