--- a/src/app/loader/loader.component.scss
+++ b/src/app/loader/loader.component.scss
@@ -4,11 +4,13 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 999999;
+    z-index: 999;
     background: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    gap: 2rem;
 }
 
 .custom-loader {
