--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,4 +1,4 @@
-<app-loader *ngIf="isLoading"></app-loader>
+<app-loader *ngIf="isLoading" [percentage]="percentage"></app-loader>
 <div class="container">
     <div class="projects" *ngIf="!isLoading">
         <app-project-card *ngFor="let project of projects" [project]="project"></app-project-card>
