--- a/src/app/single-project-card/single-project-card.component.scss
+++ b/src/app/single-project-card/single-project-card.component.scss
@@ -7,9 +7,10 @@
         font-weight: 600;
         background: rgb(141, 114, 225);
         text-align: center;
-        background: linear-gradient(90deg,
-            rgba(131,58,180,1) 0%,
-            rgba(253,29,29,1) 50%,
+        background: linear-gradient(
+            90deg,
+            rgba(131, 58, 180, 1) 0%,
+            rgba(253, 29, 29, 1) 50%,
             rgb(235, 91, 65) 100%
         );
         background-size: 100%;
@@ -41,6 +42,7 @@
         object-fit: cover;
         border-radius: 5px;
         margin: 10px;
+        margin-top: 50px;
         margin-bottom: 50px;
         img {
             width: 80%;
@@ -52,7 +54,7 @@
         align-items: center;
     }
 
-    &__back{
+    &__back {
         position: absolute;
         top: 7%;
         left: 0;
@@ -62,8 +64,8 @@
             height: 125px;
             transform: rotate(270deg);
         }
-        
-        &:hover{
+
+        &:hover {
             cursor: pointer;
             animation: bounce-horizontal 0.5s ease-in-out infinite;
         }
@@ -121,7 +123,7 @@
             gap: 4rem;
             img {
                 height: 3.5vw;
-                &:hover{
+                &:hover {
                     cursor: pointer;
                 }
             }
@@ -209,7 +211,7 @@
 }
 
 @media only screen and (hover: none) and (pointer: coarse) {
-    .project__back{
+    .project__back {
         display: none;
     }
 }
