adding easter-egg

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -24,7 +24,7 @@
                 <p>remi.jara4@gmail.com</p>
             </div>
         </a>
-        <a>
+        <a (click)="incrementCounter()">
             <div class="link-content">
                 <img src="assets/images/phone.png" alt="Phone" class="logo">
                 <p>07 71 67 53 62</p>
